WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184921
Throw in case of PeerConnection created for detached documents
https://bugs.webkit.org/show_bug.cgi?id=184921
Summary
Throw in case of PeerConnection created for detached documents
youenn fablet
Reported
2018-04-24 11:25:23 PDT
Currently we are crashing
Attachments
Patch
(7.05 KB, patch)
2018-04-24 11:29 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-04-24 11:25:44 PDT
<
rdar://problem/39629216
>
youenn fablet
Comment 2
2018-04-24 11:29:14 PDT
Created
attachment 338657
[details]
Patch
WebKit Commit Bot
Comment 3
2018-04-24 13:22:57 PDT
Comment on
attachment 338657
[details]
Patch Clearing flags on attachment: 338657 Committed
r230970
: <
https://trac.webkit.org/changeset/230970
>
WebKit Commit Bot
Comment 4
2018-04-24 13:22:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug