Throw in case of PeerConnection created for detached documents https://bugs.webkit.org/show_bug.cgi?id=184921 <rdar://problem/39629216>

Reviewed by Eric Carlson.

Source/WebCore:

Add a check to ensure that page is not null when creating a peer connection backend.
In that case, the peer connection constructor will later on throw.
The same for setConfiguration is done.
Behavior is consistent with Chrome.

Test: webrtc/pc-detached-document.html

* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.cpp:
(WebCore::createLibWebRTCPeerConnectionBackend):
(WebCore::LibWebRTCPeerConnectionBackend::LibWebRTCPeerConnectionBackend):
(WebCore::LibWebRTCPeerConnectionBackend::setConfiguration):
(WebCore::libWebRTCProvider): Deleted.
* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.h:

LayoutTests:

* webrtc/pc-detached-document-expected.txt: Added.
* webrtc/pc-detached-document.html: Added.


Canonical link: https://commits.webkit.org/200443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230970 268f45cc-cd09-0410-ab3c-d52691b4dbfc